--- a/docfx_project/Articles_TECH/System/999_001.md
+++ b/docfx_project/Articles_TECH/System/999_001.md
@@ -2,7 +2,7 @@
 
 ## 開發流程形式
 
-    使用者說：「我要一個功能」，然後世界上就多了一套系統。
+    使用者說：「要有系統」，然後就有了系統。
     
 上面這句話所說的這種事情是不會發生的，每套系統的開發都要經過一連串的程序，才能從一場場的會議轉化為一個個的功能，而一連串的過程可以概分為兩種型式：  
 
