--- a/docfx_project/Articles_TECH/9999_000-開發環境.md
+++ b/docfx_project/Articles_TECH/9999_000-開發環境.md
@@ -7,9 +7,12 @@ last_modified_at: 2020-03-30 23:59:59 UTC+8
 # 開發環境
 * [Visual Studio Code][VSCode]
 * [Node.js][Node]
-
+* [Vue.js devtools][vuetools]
 
 ## Visual Studio Code Extension
+* [cdnjs][cdnjs]: 搜尋 JS 套件名稱、版本，並直接引入 CDN 連結。
+* [Live Server][liveServer]: 可以 HTTP 啟動網站，更動程式碼會即時反應到畫面上( Hot Reload )。
+* [Vetur][Vetur]: Vue 開發工具，語法高亮、程式片段及自動補足。
 * [Preview on Web Server][PoWS]: 提供即時的網頁檢視。
 * [Bracket Pair Colorizer][BPC]: 將括號以不同顏色顯示。
 * [Path Intellisense][PI]:提供相對路徑的自動建議。
@@ -26,6 +29,10 @@ last_modified_at: 2020-03-30 23:59:59 UTC+8
 * [PostMan][PostMan]
 
 [VSCode]:https://code.visualstudio.com/
+[cdnjs]:https://marketplace.visualstudio.com/items?itemName=JakeWilson.vscode-cdnjs
+[liveServer]:https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer
+[Vetur]:https://marketplace.visualstudio.com/items?itemName=octref.vetur
+[vuetools]:https://chrome.google.com/webstore/detail/vuejs-devtools/nhdogjmejiglipccpnnnanhbledajbpd
 [Node]:https://nodejs.org/en/download/
 [PostMan]:https://www.postman.com/downloads/
 [git]:https://git-scm.com/
