--- a/docfx_project/Articles_TECH/9999_000-開發環境.md
+++ b/docfx_project/Articles_TECH/9999_000-開發環境.md
@@ -1,6 +1,6 @@
 ---
 layout: Post
-title: "#000建立開發環境"
+title: "建立開發環境"
 date: 2020-03-30 23:59:59 UTC+8 
 last_modified_at: 2020-03-30 23:59:59 UTC+8 
 ---
